istio/apply/orchestrator/destinationRule.yml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  namespace: istio-system
  name: orchestrator-destination-rule
spec:
  exportTo:
    - "*"
  host: orchestrator-service.microservices-with-k8s.svc.cluster.local
  trafficPolicy:
    loadBalancer:
      simple: ROUND_ROBIN
    tls:
      mode: DISABLE
