istio/apply/orchestrator/virtualService.yml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  namespace: istio-system
  name: orchestrator-virtual-service
spec:
  exportTo:
    - "*"
  hosts:
    - "*"
  gateways:
    - gateway
  http:
    - name: checkout-route
      match:
        - uri:
            prefix: /checkout/
      route:
        - destination:
            host: orchestrator-service.microservices-with-k8s.svc.cluster.local
            port:
              number: 80
